--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,26 @@
 {
   "manifest_version": 2,
-
   "name": "Modify CSS and HTML PowerApps",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "PowerApps mod",
-
-  "content_scripts": [{
-    "css": ["styles.css"],
-    "js": ["content.js"],
-    "matches": ["https://us.create.powerapps.com/studio/#"]
-  }]
-
+  "permissions": [
+    "tabs",
+    "storage",
+    "declarativeContent",
+    "activeTab"
+  ],
+  "background": {
+    "scripts": [
+      "background.js"
+    ],
+    "persistent": false
+  },
+  
+  "page_action": {
+      "default_title": "Apply css",
+      "default_popup": "index.html",
+    "default_icon": {
+      "16": "img.png"
+    }
+  }
 }
