--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Modify CSS and HTML PowerApps",
+  "name": "Better UI for PowerApps studio",
   "version": "0.1.4",
-  "description": "PowerApps mod",
+  "description": "Modify CSS and HTML PowerApps",
   "permissions": [
     "tabs",
     "storage",
